# patience

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  django.yml  main.yml
ansible/: ansible.cfg  site.yml
ansible/inventories/: github.ini  local.ini
apps/core/: urls.py  views.py
apps/users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
patience/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: patience.css  patience.css.map
static/scss/: patience.scss
templates/: 400.html  403.html  404.html  500.html  base.html
templates/core/: index.html
templates/dashboard/: dashboard.html
templates/dashboard/doctor/: doctor-dashboard.html
templates/dashboard/patient/: patient-dashboard.html
templates/users/: create-patient.html  doctor-signup.html  login.html  logout.html
templates/users/all/: login.html  reset-password-confirm-view.html  reset-password-confirm.html  reset-password.html
templates/users/base/: base-password-confirm.html
templates/users/common/: login.html  password-reset-complete.html  password-reset-done.html
templates/users/doctor/: create-doctor.html
tests/core/: test_error_pages.py
tests/test_models/: test_consultation.py  test_profiles.py
tests/test_signals/: test_permissions.py
tests/test_views/: test_auth.py  test_create_patient.py  test_error_pages.py  test_reset_password.py
tests/users/: test_auth.py  test_create_users.py
(+13 files in other folders)
