[project]
name = "patience"
version = "0.1.0"
description = "patience is a web app for health care professionals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.7",
    "ruff>=0.11.8",
]

[dependency-groups]
dev = ["ruff", "pre-commit", "ansible>=11.5.0"]